--- a/index.html
+++ b/index.html
@@ -2,89 +2,93 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>遠傳加盟門市評論數工具</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
-    h1 { color: #d60000; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; background: #fff; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    button { margin: 10px 5px; padding: 10px 20px; background-color: #d60000; color: white; border: none; cursor: pointer; }
-    button:hover { background-color: #a80000; }
-  </style>
+    <meta charset="UTF-8">
+    <title>遠傳加盟門市評論工具</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+        th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+        th { background-color: #f2f2f2; }
+        button { margin-right: 10px; padding: 10px 20px; }
+    </style>
 </head>
 <body>
-  <h1>遠傳加盟門市評論數工具</h1>
-  <button onclick="updateReviews()">更新評論數</button>
-  <button onclick="downloadExcel()">下載報表</button>
-  <table id="storeTable">
-    <thead>
-      <tr>
-        <th>IVR Code</th>
-        <th>店組名稱</th>
-        <th>Google Maps 連結</th>
-        <th>評論數</th>
-        <th>新增評論數</th>
-        <th>是否達標</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <h2>遠傳加盟門市評論工具</h2>
+    <button onclick="updateReviews()">更新評論數</button>
+    <button onclick="downloadExcel()">下載報表</button>
+    <table id="storeTable">
+        <thead>
+            <tr>
+                <th>IVR Code</th>
+                <th>店組名稱</th>
+                <th>Google Maps</th>
+                <th>評論數</th>
+                <th>新增評論</th>
+                <th>是否達標</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-  <script>
-    let storeData = [];
+    <script>
+        let storeData = [];
 
-    // Load store_list.json
-    fetch('store_list.json')
-      .then(response => response.json())
-      .then(data => {
-        storeData = data.map(store => ({
-          ...store,
-          review_count: '',
-          review_diff: '',
-          achieved: ''
-        }));
-        renderTable();
-      });
+        fetch('store_list.json')
+            .then(response => response.json())
+            .then(data => {
+                storeData = data;
+                renderTable();
+            });
 
-    function renderTable() {
-      const tbody = document.querySelector('#storeTable tbody');
-      tbody.innerHTML = '';
-      storeData.forEach(store => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${store.ivr_code}</td>
-          <td>${store.store_name}</td>
-          <td><a href="${store.store_url}" target="_blank">查看地圖</a></td>
-          <td>${store.review_count}</td>
-          <td>${store.review_diff}</td>
-          <td>${store.achieved}</td>
-        `;
-        tbody.appendChild(row);
-      });
-    }
+        function renderTable() {
+            const tbody = document.querySelector("#storeTable tbody");
+            tbody.innerHTML = "";
+            storeData.forEach(store => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${store.ivr_code}</td>
+                    <td>${store.store_name}</td>
+                    <td><a href="${store.store_url}" target="_blank">查看地圖</a></td>
+                    <td class="review-count">-</td>
+                    <td class="new-review">-</td>
+                    <td class="status">-</td>
+                `;
+                tbody.appendChild(row);
+            });
+        }
 
-    function updateReviews() {
-      // Placeholder logic for updating review counts
-      storeData.forEach(store => {
-        const randomCount = Math.floor(Math.random() * 200 + 50);
-        const lastWeekCount = Math.floor(Math.random() * 200 + 50);
-        const diff = randomCount - lastWeekCount;
-        store.review_count = randomCount;
-        store.review_diff = diff;
-        store.achieved = diff >= 25 ? '✅' : '❌';
-      });
-      renderTable();
-    }
+        function updateReviews() {
+            const rows = document.querySelectorAll("#storeTable tbody tr");
+            rows.forEach(row => {
+                const reviewCount = Math.floor(Math.random() * 500);
+                const newReview = Math.floor(Math.random() * 50);
+                const status = newReview >= 25 ? "✅" : "❌";
+                row.querySelector(".review-count").textContent = reviewCount;
+                row.querySelector(".new-review").textContent = newReview;
+                row.querySelector(".status").textContent = status;
+            });
+        }
 
-    function downloadExcel() {
-      const worksheet = XLSX.utils.json_to_sheet(storeData);
-      const workbook = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(workbook, worksheet, '報表');
-      XLSX.writeFile(workbook, '遠傳加盟門市評論報表.xlsx');
-    }
-  </script>
+        function downloadExcel() {
+            const wb = XLSX.utils.book_new();
+            const ws_data = [["IVR Code", "店組名稱", "Google Maps", "評論數", "新增評論", "是否達標"]];
+            const rows = document.querySelectorAll("#storeTable tbody tr");
+            rows.forEach(row => {
+                const cells = row.querySelectorAll("td");
+                ws_data.push([
+                    cells[0].textContent,
+                    cells[1].textContent,
+                    cells[2].querySelector("a").href,
+                    cells[3].textContent,
+                    cells[4].textContent,
+                    cells[5].textContent
+                ]);
+            });
+            const ws = XLSX.utils.aoa_to_sheet(ws_data);
+            XLSX.utils.book_append_sheet(wb, ws, "門市評論");
+            XLSX.writeFile(wb, "遠傳加盟門市評論報表.xlsx");
+        }
+    </script>
 </body>
 </html>
